{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 236,
  "lineage": "14f35176-5cf0-5a78-fec2-568c08d47d6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cbimport_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013a129d325529d4d",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-040dfb17d57633764",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "EBS for Data Parse and Load"
                },
                "throughput": 125,
                "volume_id": "vol-08669c9af03e2386d",
                "volume_size": 200,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-040dfb17d57633764",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b874ef4e8bfcaa2",
            "private_dns": "ip-10-0-1-57.us-west-2.compute.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-54-71-197-13.us-west-2.compute.amazonaws.com",
            "public_ip": "54.71.197.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e5fb91cc7e7739d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-cb-cbimport",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-cb-cbimport",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes",
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:internet-gateway/igw-043ad4331a0efc627",
            "id": "igw-043ad4331a0efc627",
            "owner_id": "756849292726",
            "tags": {
              "Name": "tf-main-gw"
            },
            "tags_all": {
              "Name": "tf-main-gw"
            },
            "vpc_id": "vpc-0586dd77144d6fe82"
          },
          "dependencies": [
            "aws_vpc.tf_main_cb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:route-table/rtb-0dd8628ec3b7ada2c",
            "id": "rtb-0dd8628ec3b7ada2c",
            "owner_id": "756849292726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043ad4331a0efc627",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-example-route"
            },
            "tags_all": {
              "Name": "tf-example-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0586dd77144d6fe82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.tf_main_cb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0036c3d9ec454f463",
            "route_table_id": "rtb-0dd8628ec3b7ada2c",
            "subnet_id": "subnet-0022c9461552435de"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-0828d84630fc66db6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0828d84630fc66db6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_allow_tls"
            },
            "tags_all": {
              "Name": "tf_allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0586dd77144d6fe82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main_cb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cb_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-018099eb769b7b3dc",
            "description": "Couchbase nodes ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018099eb769b7b3dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Client Ports HTTPS ",
                "from_port": 18091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 18097
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Encrypted Mode-to-Node",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Unencrypted Mode-to-Node",
                "from_port": 8091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 21350
              },
              {
                "cidr_blocks": [
                  "73.246.73.171/32"
                ],
                "description": "Client Port Import HTTPS ",
                "from_port": 11207,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 11210
              }
            ],
            "name": "couchbase_nodes",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_elk_es_nodes"
            },
            "tags_all": {
              "Name": "tf_elk_es_nodes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0586dd77144d6fe82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main_cb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_main_cb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:subnet/subnet-0022c9461552435de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0022c9461552435de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756849292726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-Main-cb-subnet"
            },
            "tags_all": {
              "Name": "tf-Main-cb-subnet"
            },
            "vpc_id": "vpc-0586dd77144d6fe82"
          },
          "dependencies": [
            "aws_vpc.tf_main_cb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_main_cb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:vpc/vpc-0586dd77144d6fe82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c82e28061342e25",
            "default_route_table_id": "rtb-071baf9a89c54c8d9",
            "default_security_group_id": "sg-0c6157351da7227d8",
            "dhcp_options_id": "dopt-cfa1e9b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0586dd77144d6fe82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071baf9a89c54c8d9",
            "owner_id": "756849292726",
            "tags": {
              "Name": "tf-main-cb-vpc"
            },
            "tags_all": {
              "Name": "tf-main-cb-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"cb-analytics01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0997957d71dcbc4e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-0997957d71dcbc4e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-07e8f3d1b5ed2476f",
            "private_dns": "ip-10-0-1-104.us-west-2.compute.internal",
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-35-89-163-239.us-west-2.compute.amazonaws.com",
            "public_ip": "35.89.163.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0badda3ca344f84a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-cb-analytics01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-cb-analytics01",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-cb-analytics01"
            },
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes",
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"cb-analytics02\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0da240811eb7d2027",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-0da240811eb7d2027",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0cf37231e7fe43ae7",
            "private_dns": "ip-10-0-1-102.us-west-2.compute.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-34-219-245-73.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.245.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aec163a944285b46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-cb-analytics02",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-cb-analytics02",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-cb-analytics02"
            },
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes",
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"cb-index01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-05186cd48cbebe293",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-05186cd48cbebe293",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0bb103dca112a0f57",
            "private_dns": "ip-10-0-1-132.us-west-2.compute.internal",
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-35-93-9-10.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.9.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05477830dea110eb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-cb-index01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-cb-index01",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-cb-index01"
            },
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes",
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"cb-index02\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-06d8bfd0da6aae751",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-06d8bfd0da6aae751",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0051df80ff6da6340",
            "private_dns": "ip-10-0-1-58.us-west-2.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-35-92-156-69.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.156.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c494daf32036d9f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-cb-index02",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-cb-index02",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-cb-index02"
            },
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_vpc.tf_main_cb",
            "data.aws_ami.amazon-2",
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes",
            "aws_subnet.tf_main_cb"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"cb01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0dcceb0816b92e76c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-0dcceb0816b92e76c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0f704b8486e89e126",
            "private_dns": "ip-10-0-1-127.us-west-2.compute.internal",
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-54-148-72-30.us-west-2.compute.amazonaws.com",
            "public_ip": "54.148.72.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab22bc91bce5ac45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-cb01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-cb01",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-cb01"
            },
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb",
            "data.aws_ami.amazon-2",
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"cb02\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0a37d33cda98df644",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-0a37d33cda98df644",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-02e0669303c0c8412",
            "private_dns": "ip-10-0-1-15.us-west-2.compute.internal",
            "private_ip": "10.0.1.15",
            "public_dns": "ec2-35-87-207-168.us-west-2.compute.amazonaws.com",
            "public_ip": "35.87.207.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099c92c0fe47240fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-cb02",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-cb02",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-cb02"
            },
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes",
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"cb03\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0629b3eb3dc29d46e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2RoleForSSMandS3",
            "id": "i-0629b3eb3dc29d46e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-03bf026ef56e2c25b",
            "private_dns": "ip-10-0-1-62.us-west-2.compute.internal",
            "private_ip": "10.0.1.62",
            "public_dns": "ec2-35-90-39-136.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.39.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8dc2f8ce92089e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0022c9461552435de",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-cb03",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-cb03",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-cb03"
            },
            "vpc_security_group_ids": [
              "sg-018099eb769b7b3dc",
              "sg-0828d84630fc66db6"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.cb_nodes",
            "aws_subnet.tf_main_cb",
            "aws_vpc.tf_main_cb",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    }
  ]
}